--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
             margin: 20px 0;
         }
         table, th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #0099cc; /* กำหนดขอบตารางเป็นสีฟ้า */
         }
         th, td {
             padding: 12px;
             text-align: left;
         }
         th {
-            background-color: #333;
+            background-color: #0099cc; /* กำหนดหัวข้อเป็นสีฟ้าเข้ม */
             color: #fff;
         }
         tr:nth-child(even) {
-            background-color: #f2f2f2;
+            background-color: #cceeff; /* กำหนดสีพื้นหลังแถวคู่เป็นฟ้าอ่อน */
+        }
+        tr:nth-child(odd) {
+            background-color: #e6f7ff; /* กำหนดสีพื้นหลังแถวคี่เป็นฟ้าอ่อนอีกเฉด */
         }
     </style>
 </head>
