--- a/index.html
+++ b/index.html
@@ -20,21 +20,18 @@
             margin: 20px 0;
         }
         table, th, td {
-            border: 1px solid #0099cc; /* กำหนดขอบตารางเป็นสีฟ้า */
+            border: 1px solid #ddd;
         }
         th, td {
             padding: 12px;
             text-align: left;
         }
         th {
-            background-color: #0099cc; /* กำหนดหัวข้อเป็นสีฟ้าเข้ม */
+            background-color: #333;
             color: #fff;
         }
         tr:nth-child(even) {
-            background-color: #cceeff; /* กำหนดสีพื้นหลังแถวคู่เป็นฟ้าอ่อน */
-        }
-        tr:nth-child(odd) {
-            background-color: #e6f7ff; /* กำหนดสีพื้นหลังแถวคี่เป็นฟ้าอ่อนอีกเฉด */
+            background-color: #f2f2f2;
         }
     </style>
 </head>
