--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f0f8ff;
+            background-color: #f4f4f4;
         }
-        h1, h2 {
+        h1 {
             color: #333;
         }
         table {
@@ -20,26 +20,18 @@
             margin: 20px 0;
         }
         table, th, td {
-            border: 1px solid #007acc;
+            border: 1px solid #ddd;
         }
         th, td {
             padding: 12px;
             text-align: left;
         }
         th {
-            background-color: #007acc;
+            background-color: #333;
             color: #fff;
         }
         tr:nth-child(even) {
-            background-color: #e0f7ff;
-        }
-        tr:nth-child(odd) {
-            background-color: #f0fbff;
-        }
-        ul {
-            list-style-type: disc;
-            margin: 20px 0;
-            padding-left: 40px;
+            background-color: #f2f2f2;
         }
     </style>
 </head>
@@ -86,9 +78,9 @@
             </tr>
             <tr>
                 <td><strong>การจัดการข้อยกเว้น (Exception Handling)</strong></td>
-                <td>มีโครงสร้างการจัดการข้อยกเว้นที่เข้มงวด (try-catch)</td>
-                <td>รองรับการจัดการข้อยกเว้น แต่ไม่บังคับให้ตรวจสอบข้อผิดพลาด</td>
-                <td>รองรับการจัดการข้อยกเว้นในรูปแบบที่เข้าใจง่าย</td>
+                <td>ใช้ try, catch, finally และมี checked exceptions</td>
+                <td>ใช้ try, catch, และ throw ไม่มี checked exceptions</td>
+                <td>ใช้ try, except, finally ไม่มี checked exceptions</td>
             </tr>
             <tr>
                 <td><strong>ความยืดหยุ่นในการเขียนโค้ด</strong></td>
