--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         </thead>
         <tbody>
             <tr>
-                <td><strong>การจัดการหน่วยความจำ</strong></td>
+                <td><strong>Memory Managment</strong></td>
                 <td>ใช้ Garbage Collector จัดการหน่วยความจำอัตโนมัติ</td>
                 <td>ต้องจัดการหน่วยความจำเองโดยใช้ <code>new</code> และ <code>delete</code></td>
                 <td>ใช้ Garbage Collector จัดการหน่วยความจำ แต่สามารถจัดการเองได้บางส่วน</td>
             </tr>
             <tr>
                 <td><strong>การประกาศตัวแปร</strong></td>
-                <td>ต้องระบุชนิดข้อมูลที่ชัดเจน (strongly-typed)</td>
-                <td>ต้องระบุชนิดข้อมูลและมีการจัดการความปลอดภัยของตัวแปร (strongly-typed)</td>
-                <td>ไม่ต้องระบุชนิดข้อมูล (dynamically-typed)</td>
+                <td>ต้องระบุชนิดข้อมูลแบบชัดเจน (Strongly-typed)</td>
+                <td>ต้องระบุชนิดข้อมูลแบบชัดเจน (Strongly-typed)</td>
+                <td>ไม่ต้องระบุชนิดข้อมูล (Dynamically-typed)</td>
             </tr>
             <tr>
                 <td><strong>Multiple Inheritance (การสืบทอดหลายคลาส)</strong></td>
@@ -90,14 +90,6 @@
             </tr>
         </tbody>
     </table>
-
-    <h2>สรุป</h2>
-    <p>ภาษาทั้งสามที่กล่าวมา (Java, C++, Python) ล้วนรองรับการเขียนโปรแกรมเชิงวัตถุ (OOP) แต่ละภาษามีข้อดีและข้อเสียที่แตกต่างกันตามการใช้งาน:</p>
-    <ul>
-        <li><strong>Java:</strong> เหมาะสำหรับโปรแกรมที่ต้องการความเสถียรและการจัดการหน่วยความจำอัตโนมัติ</li>
-        <li><strong>C++:</strong> เหมาะสำหรับโปรแกรมที่ต้องการประสิทธิภาพสูงและการควบคุมหน่วยความจำด้วยตนเอง</li>
-        <li><strong>Python:</strong> เป็นภาษาที่เรียบง่ายและยืดหยุ่น เหมาะสำหรับการพัฒนาโปรแกรมอย่างรวดเร็วและเหมาะกับผู้เริ่มต้น</li>
-    </ul>
 
 </body>
 </html>
