--- a/index.html
+++ b/index.html
@@ -88,6 +88,24 @@
                 <td>มี Syntax ที่ยืดหยุ่นและรองรับทั้ง low-level และ high-level programming</td>
                 <td>มี Syntax ที่กระชับและอ่านง่าย เหมาะสำหรับผู้เริ่มต้น</td>
             </tr>
+            <tr>
+                <td><strong>ขอบเขตการทำงานของฟังก์ชัน</strong></td>
+                <td>ทุกฟังก์ชันต้องอยู่ภายในคลาส</td>
+                <td>ฟังก์ชันสามารถอยู่ภายนอกคลาสได้</td>
+                <td>ฟังก์ชันสามารถอยู่ภายนอกคลาสได้</td>
+            </tr>
+            <tr>
+                <td><strong>การป้องกันการเข้าถึงข้อมูล</strong></td>
+                <td>มี access modifiers (public, private, protected)</td>
+                <td>มี access specifiers (public, private, protected)</td>
+                <td>ไม่มี access specifiers แต่ใช้ convention</td>
+            </tr>
+            <tr>
+                <td><strong>การสนับสนุนไลบรารีและเฟรมเวิร์ก</strong></td>
+                <td>มี Spring, Hibernate เป็นต้น</td>
+                <td>มี Qt, Boost เป็นต้น</td>
+                <td>มี Django, Flask, เป็นต้น</td>
+            </tr>
         </tbody>
     </table>
 
